// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interaction snapshots > Enter selects the highlighted task and opens edit TUI 1`] = `
"                                                                                
  Edit Task MRKL-001                                                            
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Status            todo                                                        
  Priority          ▲ 5-highest                                                 
  Title           auth epic                                                     
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/status/priority  Ctrl+N newline  Enter submit  Esc 
quit                                                                            "
`;

exports[`interaction snapshots > Tab key switches between Tasks and Archive 1`] = `
" Tasks   [Archive]                                                              
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-099    ✖ ◇       old feature           │ ◇ MRKL-099 feat ✖                 
                                            │ old feature                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
1/1 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`interaction snapshots > arrow down moves selection to next task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    ○ ▲       auth epic             │ △ MRKL-002 fix ◑                  
MRKL-002    ◑ △       fix login bug         │ fix login bug                     
MRKL-003    ○ ▽       auth tests            │                                   
MRKL-004    ✔ ◇       update ci config      │                                   
MRKL-005    ○ ◇       dashboard layout      │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`interaction snapshots > arrow up moves selection back to previous task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    ○ ▲       auth epic             │ ▲ MRKL-001 feat ○                 
MRKL-002    ◑ △       fix login bug         │ auth epic                         
MRKL-003    ○ ▽       auth tests            │                                   
MRKL-004    ✔ ◇       update ci config      │                                   
MRKL-005    ○ ◇       dashboard layout      │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`interaction snapshots > initial render shows task list with first item selected 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    ○ ▲       auth epic             │ ▲ MRKL-001 feat ○                 
MRKL-002    ◑ △       fix login bug         │ auth epic                         
MRKL-003    ○ ▽       auth tests            │                                   
MRKL-004    ✔ ◇       update ci config      │                                   
MRKL-005    ○ ◇       dashboard layout      │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`interaction snapshots > typing characters filters the task list 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    ○ ▲       auth epic             │ ▲ MRKL-001 feat ○                 
MRKL-002    ◑ △       fix login bug         │ auth epic                         
MRKL-003    ○ ▽       auth tests            │                                   
MRKL-004    ✔ ◇       update ci config      │                                   
MRKL-005    ○ ◇       dashboard layout      │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > archive tab active snapshot at 80 cols 1`] = `
" Tasks   [Archive]                                                              
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-020    ✖ ◇       Archived feature      │ ◇ MRKL-020 feat ✖                 
MRKL-021    ✔ ◇       Old bugfix            │ Archived feature                  
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
2/2 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > basic task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    ○ ◉ ▲     Add user authenticat… │ ◉▲ MRKL-001 feat ○                
├─MRKL-004    ○ ◌ ▽     Design dashboard l… │ Add user authentication           
MRKL-002    ◑ △       Fix login redirect b… │                                   
MRKL-003    ✔ ◇       Update CI pipeline c… │ Relationships                     
MRKL-005    ◑ ▼       Refactor token valid… │   ◌ Children: MRKL-004            
MRKL-006    ○ ◇       Write integration te… │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
6/6 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > blocking indicators snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-010    ○ ▲ «     Database migration    │ ▲ MRKL-010 feat ○                 
MRKL-011    ○ △ »     API endpoints         │ Database migration                
MRKL-012    ○ ◇ »     Frontend integration  │                                   
                                            │ Relationships                     
                                            │   « Blocks: MRKL-011, MRKL-012    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
3/3 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > empty task list snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
                                        
────────────────────────────────────────
ID          STATUS    TITLE             
────────────────────────────────────────
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
────────────────────────────────────────
                                        
                                        
                                        
                                        
────────────────────────────────────────
0/0 tasks  ↑↓: navigate  /: search  s: s
ort  d: direction  p: preview  Tab: swit"
`;

exports[`render snapshots > empty task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
0/0 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > empty task list snapshot at 120 cols 1`] = `
"[Tasks]   Archive                                                                                                       
                                                                                                                        
                                                                                                                        
──────────────────────────────────────────────────────────────────┬─────────────────────────────────────────────────────
ID          STATUS    TITLE                                       │ Preview                                             
──────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
──────────────────────────────────────────────────────────────────┴─────────────────────────────────────────────────────
0/0 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: switch  Esc: quit                           "
`;

exports[`render snapshots > epic grouping snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    ○ ◉ ◇     Auth epic             │ ◉◇ MRKL-001 feat ○                
├─MRKL-002    ◑ ◌ ◇     Login page          │ Auth epic                         
├─MRKL-003    ○ ◌ ◇     Token refresh       │                                   
MRKL-004    ✔ ◇       Fix CI pipeline       │ Relationships                     
MRKL-005    ○ ◇       Update README         │   ◌ Children: MRKL-002, MRKL-003  
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > horizontal split snapshot at 70 cols 1`] = `
"[Tasks]   Archive                                                     
                                                                      
                                                                      
──────────────────────────────────────────────────────────────────────
ID          STATUS    TITLE                                           
──────────────────────────────────────────────────────────────────────
MRKL-001    ○ ▲       Add user authentication                         
MRKL-002    ◑ △       Fix login redirect bug                          
MRKL-003    ✔ ◇       Update CI pipeline config                       
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
──────────────────────────────────────────────────────────────────────
 ▲ MRKL-001 feat ○                                                    
 Add user authentication                                              
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
──────────────────────────────────────────────────────────────────────
3/3 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview 
 Tab: switch  Esc: quit                                               "
`;

exports[`render snapshots > long flag wraps within preview panel at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    ○ ◇       Task                  │ ◇ MRKL-001 feat ○                 
                                            │ Task                              
                                            │                                   
                                            │ ⚑                                 
                                            │ this-is-a-very-long-flag-that-sh… 
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
1/1 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > long preview title wraps within panel bounds at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-041    ○ ▲       create function shou… │ ▲ MRKL-041 feat ○                 
MRKL-002    ◑ ◇       Short task            │ create function should default to 
                                            │ feat if not type provided and     
                                            │ also handle edge cases            
                                            │                                   
                                            │ Description                       
                                            │ ci job failed once on github,     
                                            │ passed again on second run with   
                                            │ no changes. This is a very long   
                                            │ description that should wrap      
                                            │ properly within the preview panel 
                                            │ bounds.                           
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
2/2 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > long preview title wraps within panel bounds at 100 cols 1`] = `
"[Tasks]   Archive                                                                                   
                                                                                                    
                                                                                                    
───────────────────────────────────────────────────────┬────────────────────────────────────────────
ID          STATUS    TITLE                            │ Preview                                    
───────────────────────────────────────────────────────┼────────────────────────────────────────────
MRKL-041    ○ ▲       create function should default … │ ▲ MRKL-041 feat ○                          
                                                       │ create function should default to feat if  
                                                       │ not type provided and also handle edge     
                                                       │ cases when no arguments given              
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
───────────────────────────────────────────────────────┴────────────────────────────────────────────
1/1 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: switch  Esc: quit       "
`;

exports[`render snapshots > mixed icon widths snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    ○ ▲ «     Highest priority blo… │ ▲ MRKL-001 feat ○                 
MRKL-002    ◑ ◇       Normal priority task  │ Highest priority blocker          
MRKL-003    ○ ▼ »     Lowest blocked task   │                                   
                                            │ Relationships                     
                                            │   « Blocks: MRKL-003              
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
3/3 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > preview hidden snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
ID          STATUS    TITLE                                                     
────────────────────────────────────────────────────────────────────────────────
MRKL-001    ○ ▲       Add user authentication                                   
MRKL-002    ◑ △       Fix login redirect bug                                    
MRKL-003    ✔ ◇       Update CI pipeline config                                 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
3/3 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;

exports[`render snapshots > scroll offset snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-004    ○ ◇       Task number 4         │ ◇ MRKL-006 chore ✔                
MRKL-005    ◑ ◇       Task number 5         │ Task number 6                     
MRKL-006    ✔ ◇       Task number 6         │                                   
MRKL-007    ○ ◇       Task number 7         │                                   
MRKL-008    ◑ ◇       Task number 8         │                                   
MRKL-009    ✔ ◇       Task number 9         │                                   
MRKL-010    ○ ◇       Task number 10        │                                   
MRKL-011    ◑ ◇       Task number 11        │                                   
MRKL-012    ✔ ◇       Task number 12        │                                   
MRKL-013    ○ ◇       Task number 13        │                                   
MRKL-014    ◑ ◇       Task number 14        │                                   
MRKL-015    ✔ ◇       Task number 15        │                                   
MRKL-016    ○ ◇       Task number 16        │                                   
MRKL-017    ◑ ◇       Task number 17        │                                   
MRKL-018    ✔ ◇       Task number 18        │                                   
────────────────────────────────────────────┴───────────────────────────────────
20/20 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: sw
itch  Esc: quit                                                                 "
`;

exports[`render snapshots > terminal too small snapshot at 25 cols 1`] = `
"                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
   Terminal too small    
 Need 40+ cols (have 25) "
`;

exports[`render snapshots > title truncation snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
                                        
────────────────────────────────────────
ID          STATUS    TITLE             
────────────────────────────────────────
MRKL-001    ○ ◇       Implement user a… 
MRKL-002    ◑ ◇       Fix critical pro… 
MRKL-003    ✔ ◇       Refactor legacy … 
                                        
                                        
                                        
                                        
                                        
                                        
                                        
────────────────────────────────────────
 ◇ MRKL-001 feat ○                      
 Implement user authentication with     
 OAuth2 and SAML                        
                                        
────────────────────────────────────────
3/3 tasks  ↑↓: navigate  /: search  s: s
ort  d: direction  p: preview  Tab: swit"
`;

exports[`render snapshots > vertical split still used at 100 cols 1`] = `
"[Tasks]   Archive                                                                                   
                                                                                                    
                                                                                                    
───────────────────────────────────────────────────────┬────────────────────────────────────────────
ID          STATUS    TITLE                            │ Preview                                    
───────────────────────────────────────────────────────┼────────────────────────────────────────────
MRKL-001    ○ ▲       Add user authentication          │ ▲ MRKL-001 feat ○                          
                                                       │ Add user authentication                    
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
                                                       │                                            
───────────────────────────────────────────────────────┴────────────────────────────────────────────
1/1 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: switch  Esc: quit       "
`;

exports[`render snapshots > wraps long relationship ID lists with aligned continuation lines 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS    TITLE                 │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-050    ○ ▲ «     blocker task          │ ▲ MRKL-050 feat ○                 
MRKL-051    ○ ◇ »     task a                │ blocker task                      
MRKL-052    ○ ◇ »     task b                │                                   
MRKL-053    ○ ◇ »     task c                │ Relationships                     
MRKL-054    ○ ◇ »     task d                │   « Blocks: MRKL-051, MRKL-052,   
MRKL-055    ○ ◇ »     task e                │             MRKL-053, MRKL-054,   
                                            │             MRKL-055              
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
6/6 tasks  ↑↓: navigate  /: search  s: sort  d: direction  p: preview  Tab: swit
ch  Esc: quit                                                                   "
`;
